Fixed homepage overflow on really small screens

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .home {
   height: calc(100vh - 75px);
-  max-height: 700px;
+  max-height: 750px;
   position: relative;
   width: 100%;
   background-color: #f6f6f6;
@@ -103,5 +103,11 @@
   .home__shoe-bg {
     width: 300px;
     height: 300px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .home {
+    height: 100vh;
   }
 }
